# pyre

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  justfile  pyproject.toml
arena_submission/: Dockerfile  app.py  launcher.py  meta.json
benchmarks/: BENCH_PLAN.en.md  BENCH_PLAN.md  baseline.json  bench.py  bench_compression.py  bench_gil.py  bench_plaintext.py  bench_subinterp.py  benchmark-1-reason.md  benchmark-12-stability.md  benchmark-14-linux-full.md  benchmark-14-linux-v1.3.md  benchmark-14-linux.en.md  benchmark-14-linux.md  benchmark-15-vs-actix-compression.md  benchmark-16-v1.6-regression-audit.md  benchmark-17-arena-head-to-head.md  benchmark-2-results.md  benchmark-3-full-stack.md  benchmark-4-features.md  benchmark-5-refactor.md  benchmark-6-full-suite.md  benchmark-8-sse-regression.md  benchmark-9-gil-memory.md  mem_bench.sh  pyronova_bench_app.py  robyn_app.py  run_bench.sh  run_comparison.sh  run_compression_bench.sh  run_full_bench.sh  run_logging_bench.sh  run_vs_robyn.sh
benchmarks/rust-baseline/: Cargo.toml
benchmarks/rust-baseline/src/: actix_compressed.rs  actix_compressed_tuned.rs  actix_server.rs  actix_tls.rs  axum_server.rs
docs/: arena-async-db-and-static.md  benchmark-linux-reproduce.md  developer-experience.md  dual-engine-design.md  features.md  gc-optimization-guide.md  gil-monitor-design.md  http-arena-preflight.md  logging-design.en.md  logging-design.md  memory-leak-investigation-2026-04-19.md  optimize-async-db.md  optimize-crud.md  optimize-json.md  phase-7.2-async-bridge.md  positioning-and-roadmap.md  release-pipeline.md  rpc-engine-design.md  subinterp-c-extension-compat.md  subinterp-safe-ecosystem.md  what-are-python-sub-interpreters.md  why-not-multiprocess.md
examples/: README.md  ai_agent_server.py  fullstack_api.py  hello.py  hello_subinterp.py  sse_demo.py  trading_api.py  websocket_demo.py
src/: app.rs  bench.rs  body_stream.rs  compression.rs  db.rs  grpc.rs  handlers.rs  interp.rs  json.rs  leak_detect.rs  lib.rs  logging.rs  main_bridge.rs  monitor.rs  pyre_request_type.rs  pyronova_request_type.rs  response.rs  router.rs  state.rs  static_fs.rs  stream.rs  tls.rs  tpc.rs  types.rs  websocket.rs  worker.rs
tests/: conftest.py  test_admission_control.py  test_all_features.py  test_async.py  test_cached_json.py  (+51 more)
(+64 files in other folders)
