[package]
name = "skytrade-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "skytrade_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2"] }
http-body-util = "0.1"
bytes = "1"
matchit = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
