[package]
name = "pyre-rust-baseline"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bench-axum"
path = "src/axum_server.rs"

[[bin]]
name = "bench-actix"
path = "src/actix_server.rs"

[[bin]]
name = "bench-actix-compressed"
path = "src/actix_compressed.rs"

[dependencies]
# Axum (same stack as Pyre: Tokio + Hyper)
axum = "0.8"
tokio = { version = "1", features = ["full"] }

# Actix-web (same stack as Robyn)
actix-web = "4"
actix-rt = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Same crates & versions Pyre uses — apples-to-apples compression CPU path.
brotli = "7"
flate2 = "1"

[[bin]]
name = "bench-actix-compressed-tuned"
path = "src/actix_compressed_tuned.rs"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
